--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
 
    
    <div class="row gy-4"> 
-    <form action="submit.php" method="post">
+    <form action="submit.php" method="POST">
       <div class="col-md-6">
         <label for="name-field" class="pb-2">Your Name</label>
         <input type="text" name="name" id="name" class="form-control" required="">
